tests/snapshots/doctor__a_manifest_and_a_ledger_that_do_not_parse.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 2 problems. nothing was changed; the commands are for you to run.

PROBLEM 1 of 2: <HOME>/.local/share/ricepilot/profiles/old/profile.toml
  profile `old` cannot be read.
  rule: D8 (a malformed manifest is refused, never guessed at)

  unclosed array, expected `]`.

  every command that loads all the profiles — `list`, `status`, `plan`,
  `switch` — refuses until it is fixed. doctor skipped `old` and
  checked the rest.

  run:
    ricepilot show old

PROBLEM 2 of 2: <HOME>/.local/state/ricepilot/ledger.toml
  the ledger cannot be read.
  rule: SAFETY.md, the ownership predicate (its fact 3 is the ledger)

  the ledger does not parse, so ricepilot cannot tell which live paths it owns: invalid type: integer `3`, expected path string (<HOME>/.local/state/ricepilot/ledger.toml).

  until it parses, every switch refuses the paths ricepilot owns as
  unowned. doctor did not check the owned links.

  run:
    less <HOME>/.local/state/ricepilot/ledger.toml

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 1 hypr tree has an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
