tests/snapshots/doctor__a_profile_tree_that_has_drifted_from_its_record.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/rice/new
  profile `new`'s tree has changed since it was recorded.
  rule: SAFETY.md R7; D34

  2 paths have changed since ricepilot recorded it at <TS>:
    added        foot/extra.ini (file)
    changed      foot/marker

  this is the profile linked now, so these changes are what the next login
  loads.

  ricepilot never writes into a profile; an app, a script or an editor did.
  paths an app rewrites on its own belong in `volatile`.

  run:
    ricepilot verify new

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 3 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies; no interrupted gc
