tests/snapshots/doctor__adopt_then_rollback_leaves_the_path_empty_and_the_directory_in_the_attic.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.config/hypr
  is empty, and the directory you adopted from here is in the attic.
  rule: D49 (`rollback` does not undo an `adopt`)

  `ricepilot adopt` (id <TS>) moved your directory from here to the attic
  and linked this path into profile `mine`. a rollback since then retired
  that link, which leaves the path empty; it does not put the directory
  back.

  your directory is still at
    <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr

  moved back, it is a real directory again. profile `mine` still declares
  this path, so a later `ricepilot switch mine` refuses it rather than
  re-linking over it — the safe way round.

  run:
    # your own directory, back where it was
    mv -T <HOME>/.local/state/ricepilot/attic/<TS><HOME>/.config/hypr <HOME>/.config/hypr
    # or, instead, link the copy in profile `mine` again
    ricepilot switch mine --commit

not checked, or worth knowing:
  - profile `mine`: <HOME>/.local/share/ricepilot/profiles/mine/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `mine`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; no owned links; 1 hypr tree has an entry file; rescue.sh restores generation 0001 and parses; attic: 2 entries, 42 B (the newest, <TS>, 0 B); no verify-config copies
