tests/snapshots/doctor__after_rescue_sh_a_retired_link_it_restored_is_named_too.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 3 problems. nothing was changed; the commands are for you to run.

PROBLEM 1 of 3: <HOME>/.config/foot
  points somewhere other than where ricepilot linked it.
  rule: SAFETY.md, the ownership predicate (fact 3: its target must match the ledger)

  it points at
    <HOME>/rice/new/foot
  which is inside profile `new`'s tree

  the ledger recorded a link here to
    <HOME>/rice/old/foot
  for profile `old`.

  ricepilot did not re-point it, so it is someone else's link now,
  and every switch refuses it.

  that is where generation 0001 had it, the one `rescue.sh`
  restores: most likely the script put it there. to record it
  again, set it aside and roll back to that generation —
  not `switch old`, which would undo the rescue.

  run:
    # set it aside (nothing is lost); the rollback links it again
    mv -nT <HOME>/.config/foot <HOME>/.config/foot.set-aside
    ricepilot rollback
    ricepilot rollback --commit

PROBLEM 2 of 3: <HOME>/.config/hypr
  points somewhere other than where ricepilot linked it.
  rule: SAFETY.md, the ownership predicate (fact 3: its target must match the ledger)

  it points at
    <HOME>/rice/new/hypr
  which is inside profile `new`'s tree

  the ledger recorded a link here to
    <HOME>/rice/old/hypr
  for profile `old`.

  ricepilot did not re-point it, so it is someone else's link now,
  and every switch refuses it.

  that is where generation 0001 had it, the one `rescue.sh`
  restores: most likely the script put it there. to record it
  again, set it aside and roll back to that generation —
  not `switch old`, which would undo the rescue.

  run:
    # set it aside (nothing is lost); the rollback links it again
    mv -nT <HOME>/.config/hypr <HOME>/.config/hypr.set-aside
    ricepilot rollback
    ricepilot rollback --commit

PROBLEM 3 of 3: <HOME>/.config/btop
  is a link ricepilot has no record of, where the generation before had it.
  rule: SAFETY.md, the ownership predicate (fact 3: the ledger must record it)

  it points at
    <HOME>/rice/new/btop

  generation 0001, the one `rescue.sh` restores, had exactly this link;
  the current generation had none, and the ledger has no row for it.
  most likely the script put it back. every switch and rollback refuses
  it until it is set aside and the rollback links it again.

  run:
    # set it aside (nothing is lost); the rollback links it again
    mv -nT <HOME>/.config/btop <HOME>/.config/btop.set-aside
    ricepilot rollback
    ricepilot rollback --commit

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; the ledger and the manifests agree; 2 hypr trees have an entry file; 2 profile trees match their recorded manifest; rescue.sh restores generation 0001 and parses; attic: 2 entries, 0 B (the newest, <TS>, 0 B); no verify-config copies; no interrupted gc
