tests/snapshots/doctor__an_interrupted_operation_is_the_first_problem.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.local/state/ricepilot/journal/current.toml
  an operation was interrupted and has not been recovered.
  rule: SAFETY.md R5 (never half-applied); DESIGN.md §7, rung 2

  a switch or a rollback into profile `new` (id <TS>) wrote this journal and did not
  retire it, so it may have stopped part way. it touches:
    <HOME>/.config/hypr
    <HOME>/.config/foot
    <HOME>/.config/btop

  if another ricepilot is running right now, this is its journal: let it
  finish and run doctor again. otherwise `recover` reads every destination
  and finishes or undoes the operation as a whole, never half of it. until
  then, what follows may describe a half-finished state.

  run:
    # see what recovery would do; this changes nothing
    ricepilot recover
    ricepilot recover --commit

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: 3 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies; no interrupted gc
