tests/snapshots/doctor__an_owned_link_an_installer_turned_into_a_directory.snap
---
source: tests/doctor.rs
expression: r.stdout
---
ricepilot doctor: 1 problem. nothing was changed; the commands are for you to run.

PROBLEM 1 of 1: <HOME>/.config/foot
  is a real directory, not the link ricepilot recorded.
  rule: SAFETY.md, the ownership predicate; NOT-POSSIBLE.md#real-dir-at-managed-dest

  the ledger recorded a link here to
    <HOME>/rice/new/foot
  for profile `new`.

  this is what a rice installer does — caelestia's install.fish and
  `caelestia install` turn links back into directories — and whatever
  it wrote is in there. every switch refuses this path until it is
  resolved, because re-linking it would strand that.

  run:
    # what is in it, against the tree the link pointed into
    diff -r <HOME>/rice/new/foot <HOME>/.config/foot
    # set it aside (nothing is lost), then put the link back
    mv -T <HOME>/.config/foot <HOME>/.config/foot.set-aside
    ricepilot plan new
    ricepilot switch new --commit

not checked, or worth knowing:
  - profile `new`: <HOME>/rice/new/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: <HOME>/rice/old/hypr/hyprland.lua is a Lua config, which nothing can check before a login (NOT-POSSIBLE.md#verify-lua-config)
  - profile `old`: no manifest has been recorded for it yet, so its tree was not compared with anything
  - running theme daemons (/proc) and snapper's configuration (/etc/snapper) were not checked: this is the test sandbox (D56)

ok: no interrupted operation; 2 owned links intact; the ledger and the manifests agree; 2 hypr trees have an entry file; 1 profile tree matches its recorded manifest; rescue.sh restores generation 0000 and parses; attic: 1 entry, 0 B (the newest, <TS>, 0 B); no verify-config copies
